--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant</li>
         <li>Lista de Docker: Criando Conteiners sem Dor de Cabeça!!!</li>
-        <li>Ansible</li>
+        <li>Ansible: Infraestrutura como código</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software!!!</li>
     </ul>
 </body>
