--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <li>Lista de Docker: Criando Conteiners sem Dor de Cabeça!!!</li>
         <li>Ansible: Infraestrutura como código</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software!!!</li>
+        <li>Kubernetes: Introdução a orquestração de containers</li>
     </ul>
 </body>
 </html>
