Alterando nome do curso Vangrants

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
+        <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Lista de Docker: Criando Conteiners sem Dor de Cabeça!!!</li>
         <li>Ansible: Infraestrutura de código</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software!!!</li>
